GenerateButton Event Processed.

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -33,6 +33,24 @@
     align-items: center;
 }
 
+.gpt3__navbar-sign button {
+    flex: 1;
+    width: 100%;
+    min-height: 50px;
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    background: transparent;
+    border: 2px solid #14c2a3;
+    padding: 0 1rem;
+    color: #fff;
+    cursor: pointer;
+    outline: none;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
 .gpt3__navbar-links_container p,
 .gpt3__navbar-sign p,
 .gpt3__navbar-menu_container p {
