CONNECT WALLET Button Style Changed.

--- a/frontend/src/components/navbar/navbar.css
+++ b/frontend/src/components/navbar/navbar.css
@@ -67,7 +67,7 @@
 
 .gpt3__navbar-sign button,
 .gpt3__navbar-menu_container button {
-    padding: 0.5rem 1rem;
+    /* padding: 0.5rem 1rem;
     color: #fff;
     background: #FF4820;
     font-family: var(--font-family);
@@ -78,7 +78,23 @@
     border: 0;
     outline: none;
 
+    cursor: pointer; */
+
+    flex: 1;
+    width: 100%;
+    min-height: 50px;
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    background: transparent;
+    border: 2px solid #14c2a3;
+    padding: 0 1rem;
+    color: #fff;
     cursor: pointer;
+    outline: none;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .gpt3__navbar-menu {
