--- a/frontend/src/containers/header/header.css
+++ b/frontend/src/containers/header/header.css
@@ -128,11 +128,22 @@ textarea {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
 }
 
 .gpt3__header-image img {
     width: 100%;
     height: 100%;
+}
+
+.gpt3__header-image .spinner-wrapper {
+    height: 50px;
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    width: 50px;
 }
 
 @media screen and (max-width: 1050px) {
